# 2A202600597_LeQuangTho_Day26

./: .gitignore  README.md
01-function-calling/: README.md  weather_function_calling.py
04-lab/: README.md
04-lab/mcp-client/: README.md  main.py  pyproject.toml  requirements.txt  verify_setup.py
04-lab/mcp-client/weather_agent/: __init__.py  agent.py
04-lab/mcp-server/: weather.py
examples/: README.md
examples/mcp/: weather_client.py  weather_server.py
