[project]
name = "weather-agent"
version = "0.1.0"
description = "Weather Agent using Ollama + MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "mcp>=1.17.0",
    "httpx>=0.28.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.1.1",
]
